# Space-Challenge

./: CMakeLists.txt  dialogutils.cpp  dialogutils.h  escapevelocitiessolutionwidget.cpp  escapevelocitiessolutionwidget.h  escapevelocitiessolutionwidget.ui  mainwindow.cpp  mainwindow.ui  measurementunits.cpp  measurementunits.h  orbitalmath.cpp  orbitalmath.h  planet.cpp  planet.h  planetrotationsolutionwidget.cpp  planetrotationsolutionwidget.h  planetrotationsolutionwidget.ui  planetswidget.cpp  planetswidget.h  planetswidget.ui  rocket.cpp  rocket.h  rocketaccelerationtimesolutionwidget.cpp  rocketaccelerationtimesolutionwidget.h  rocketaccelerationtimesolutionwidget.ui  rocketwidget.cpp  rocketwidget.h  rocketwidget.ui  simplifiedstraightjourneysolutionwidget.cpp  simplifiedstraightjourneysolutionwidget.h  simplifiedstraightjourneysolutionwidget.ui  solutionwidget.cpp  solutionwidget.h  solutionwidget.ui
